--- a/content/index.html
+++ b/content/index.html
@@ -1,5 +1,5 @@
 ---
-layout: commonlayout.html
+layout: commonlayout.liquid
 title: "Home"
 ---
 <div style="display: grid; grid-template-columns: 1fr 1fr; gap: 20px;">
