new post: tasker

--- a/content/tools/file-indentifier.html
+++ b/content/tools/file-indentifier.html
@@ -1,6 +1,7 @@
 ---
 layout: layout.html
 title: File Type Identifier
+description: Identify file types in the browser using Rust and WebAssembly.
 ---
 
 <h1>File Type Identifier</h1>
