deploy: 7c750ea667918c9f41ef27b3e374a8cf39659fd2

--- a/cv/index.html
+++ b/cv/index.html
@@ -16,7 +16,7 @@
                 <li class="nav-item"><a href="/">Home</a></li>
                 <li class="nav-item"><a href="/posts/">Blog</a></li>
                 <li class="nav-item"><a href="/cv/">Curriculum Vitae</a></li>
-                <li class="nav-item"><a href="/file-indentifier/">File Type Identifier</a></li>
+                <li class="nav-item"><a href="/tools/">Tools</a></li>
             </ul>
         </nav>
     </header>
@@ -95,7 +95,7 @@ VirtualBox</li>
 <li><u>Relevant Coursework:</u> Intermediate Programming, Relational Database Concepts &amp; Applications,
 Introduction to Linux, Red Hat Linux System Administration I, Ethical Hacking, Penetration Testing &amp; Cyber
 Red Team, Threat Management &amp; Vulnerability Assessment, Advanced Information Systems Security.</li>
-<li><u>Dean's List:</u> 5 consecutive semesters (Summer 2023 - Fall 2024)</li>
+<li><u>Dean's List:</u> 6 consecutive semesters (Summer 2023 - Spring 2025)</li>
 </ul>
 <h2><u>Awards and Accomplishments</u></h2>
 <p>~ Trevor McLaughlin Memorial Scholarship | May 2023 <br>
