--- a/cv/index.html
+++ b/cv/index.html
@@ -30,91 +30,153 @@
         </div>
         <!-- Page-specific content goes here -->
         <h1 style="text-align: center;">Rodrigo de Diego de Somonte</h1>
-<h2 style="text-align: center;">CYBERSECURITY TECHNOLOGY</h2>
+<h2 style="text-align: center;">Cybersecurity Specialist | Software Developer</h2>
 <h3 style="text-align: center;">✉ <a href="mailto:rodrigodsc@protonmail.ch">rodrigodsc@protonmail.ch</a> | <img src="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Ficon-library.com%2Fimages%2Flinked-in-icon-black-and-white%2Flinked-in-icon-black-and-white-2.jpg&f=1&nofb=1&ipt=9de377bdf71b57f841ffefc9f50d2459eee121d1db396eeda25c7e78a2957ab1" alt="icon" style="height: 1em; vertical-align: middle;"> <a href="https://www.linkedin.com/in/rodrigo-de-diego-de-somonte/">rodrigo-de-diego-de-somonte</a></h3>
 <h2><u>Profile</u></h2>
-<p>~ Organized and proactive cybersecurity technology student with strong Linux skills seeking a part-time/full-time
-technical position or internship. Demonstrated academic excellence with a 3.9 GPA and industry-recognized
-certifications (CompTIA A+, Security+, Linux+). Combines technical aptitude with strong problem-solving skills and
-a focus on hands-on security implementation.</p>
-<h2><u>Skills</u></h2>
-<div class="cvcolumn" style="display: grid; grid-template-columns: 1fr 1fr 1fr; gap: 20px;">
-  <!-- Column 1 -->
+<p>Detail-oriented programmer with a 3.9 GPA and a strong foundation in Python, Java, and Rust. Demonstrated full-stack develop-
+ment skills by building and deploying a Discord bot with JavaScript and engineering a reusable Rust library compiled to WebAs-
+sembly. Seeking a developer position to contribute to building efficient and secure software applications.</p>
+<div class="cvcolumn" style="display: grid; grid-template-columns: 1fr 1fr; gap: 20px;">
   <div class="cvbox" style="padding: 15px; border-radius: 10px;">
-    <h4> ~ Technical Skills </h4>
-<p><ul>
-<li>Operating Systems:
-Windows 10/11,
-Chrome OS, Android,
-Linux</li>
-<li>Programming
-Languages: Basic
-knowledge of Python,
-PHP, Bash, and JS.
-Intermediate level of
-Java.</li>
-<li>Virtualization: VMware,
-VirtualBox</li>
-</ul></p>
-  </div>
-  <!-- Column 2 -->
-  <div class="cvbox" style="padding: 15px; border-radius: 10px;">
-    <h4>~ Soft Skills</h4>
+    <h2><u>Skills</u></h2>
     <ul>
-    <li>Organized</li>
-    <li>Productive</li>
-    <li>Punctual</li>
-    <li>Responsible</li>
-    <li>Positive attitude</li>
-    <li>Kinesthetic learner</li>
-    <li>Active listener</li>
-    <li>Collaborative</li>
+    <li>Programming/Scripting:
+    Java, Python, JavaScript, PHP, SQL, Bash</li>
+    <li>Virtualization: VMware,
+    VirtualBox</li>
+    <li>Operating Systems: Android, ChromeOS, Linux, Windows 10/11
+    </li>
+    <li>Development Tools: VS Code, JetBrains Suite</li>
+    </li>
     </ul>
   </div>
-  <!-- Column 3 -->
   <div class="cvbox" style="padding: 15px; border-radius: 10px;">
-    <h4>~ Language Skills</h4>
+    <h2><u>Languages</u></h2>
     <ul>
-    <li>Spanish: native language</li>
-    <li>English: bilingual</li>
-    <li>Italian: high-
-    intermediate level</li>
-    <li>Portuguese:
-    intermediate level</li>
-    <li>French: low-intermedia
-    level</li>
-    <li>German: low-
-    intermediate level</li>
+      <li><span class="language-name">Spanish</span> <span>⬤⬤⬤⬤⬤</span></li>
+      <li><span class="language-name">English</span> <span>⬤⬤⬤⬤⬤</span></li>
+      <li><span class="language-name">Italian</span> <span>⬤⬤⬤⬤〇</span></li>
+      <li><span class="language-name">Portuguese</span> <span>⬤⬤⬤〇〇</span></li>
+      <li><span class="language-name">German</span> <span>⬤⬤〇〇〇</span></li>
+      <li><span class="language-name">French</span> <span>⬤〇〇〇〇</span></li>
     </ul>
   </div>
 </div>
+<h2><u>Projects</u></h2>
+<div>
+  <div style="display: grid; grid-template-columns: 1fr 1fr; font-weight: bold">
+    <div><img src="https://www.pngarts.com/files/8/Github-Logo-Transparent-Background-PNG.png" alt="icon" style="height: 1em; vertical-align: middle;"><a href="https://github.com/rsomonte/rsomonte.github.io">rsomonte.github.io</a></div>
+    <div><p style="text-align: right">May 2025</p></div>
+  </div>
+  <ul>
+    <li>Built a personal website using 11ty (Eleventy), a modern static site generator, to showcase web development skills and host project writeups.</li>
+    <li>Integrated a custom Wasm-based file identifier enabling client-side file type detection via a Rust core module.</li>
+    <li>Structured modular layout templates to separate content and logic, improving maintainability and scalability.</li>
+    <li>Deployed via GitHub Pages with automated publishing for fast and zero-cost hosting.</li>
+  </ul>
+  <div class="word-boxes-container">
+    <span class="word-box">HTML5</span>
+    <span class="word-box">CSS</span>
+    <span class="word-box">Version Control</span>
+    <span class="word-box">11ty</span>
+    <span class="word-box">WebAssembly</span>
+  </div>
+</div>
+<div>
+  <div style="display: grid; grid-template-columns: 1fr 1fr; font-weight: bold">
+    <div><img src="https://www.pngarts.com/files/8/Github-Logo-Transparent-Background-PNG.png" alt="icon" style="height: 1em; vertical-align: middle;"><a href="https://github.com/rsomonte/taskerbot">Tasker Bot</a></div>
+    <div><p style="text-align: right">June 2025</p></div>
+  </div>
+  <ul>
+    <li>Built a Discord bot in JavaScript to help users set and track personal objectives with frequency-based submission limits.</li>
+    <li>Implemented slash commands for user interaction and accountability.</li>
+    <li>Enforced time-based constraints on submissions (daily, weekly, monthly) and tracked consecutive streaks for each objective.</li>
+    <li>Required image proof for each submission, validating task completion before updating streak data.</li>
+    <li>Engineered a persistent data layer to manage user objectives and submission history with reliable long-term tracking.</li>
+  </ul>
+  <div class="word-boxes-container">
+    <span class="word-box">JavaScript</span>
+    <span class="word-box">Discord API</span>
+    <span class="word-box">Version Control</span>
+  </div>
+</div>
+<div>
+  <div style="display: grid; grid-template-columns: 1fr 1fr; font-weight: bold">
+    <div><img src="https://www.pngarts.com/files/8/Github-Logo-Transparent-Background-PNG.png" alt="icon" style="height: 1em; vertical-align: middle;"><a href="https://github.com/rsomonte/filetype-core">Filetype Core</a></div>
+    <div><p style="text-align: right">June 2025</p></div>
+  </div>
+  <ul>
+    <li>Authored a Rust library to accurately detect file types based on file signatures and binary content.</li>
+    <li>Leveraged Rust’s safety and performance features to ensure efficient, secure file type detection.</li>
+    <li>Built as a core engine to be reusable in multiple applications and environments, including browser-based tools via WebAssembly.</li>
+    <li>Structured project for easy integration and future extensibility.</li>
+  </ul>
+  <div class="word-boxes-container">
+    <span class="word-box">Rust</span>
+    <span class="word-box">Version Control</span>
+  </div>
+</div>
+<div>
+  <div style="display: grid; grid-template-columns: 1fr 1fr; font-weight: bold">
+    <div><img src="https://www.pngarts.com/files/8/Github-Logo-Transparent-Background-PNG.png" alt="icon" style="height: 1em; vertical-align: middle;"><a href="https://github.com/rsomonte/filetype-cli">Filetype CLI</a></div>
+    <div><p style="text-align: right">June 2025</p></div>
+  </div>
+  <ul>
+    <li>Developed a cross-platform CLI tool in Rust for rapid file type identification.</li>
+    <li>Integrated directly with filetype-core for consistent logic across CLI and WebAssembly interfaces.</li>
+  </ul>
+  <div class="word-boxes-container">
+    <span class="word-box">Rust</span>
+    <span class="word-box">Version Control</span>
+  </div>
+</div>
 <h2><u>Education</u></h2>
-<p style="font-family: Georgia, serif !important;" > ~ Bachelor’s Degree in Cybersecurity Technology | Jun 2023 – Present</p>
-<p>University of Maryland Global Campus (UMGC) – <strong>GPA: 3.93</strong></p>
-<ul>
-<li><u>Relevant Coursework:</u> Intermediate Programming, Relational Database Concepts &amp; Applications,
-Introduction to Linux, Red Hat Linux System Administration I, Ethical Hacking, Penetration Testing &amp; Cyber
-Red Team, Threat Management &amp; Vulnerability Assessment, Advanced Information Systems Security.</li>
-<li><u>Dean's List:</u> 6 consecutive semesters (Summer 2023 - Spring 2025)</li>
-</ul>
-<h2><u>Awards and Accomplishments</u></h2>
-<p>~ Trevor McLaughlin Memorial Scholarship | May 2023 <br>
-~ CompTIA A+ Certification – Certification ID: WRMKE4YTMJ1E1E5B | Jul 2024<br>
-~ CompTIA Security+ Certification – Certification ID: DFFBVVLRH2VQQ1CS | Sep 2024<br>
-~ CompTIA Linux+ Certification – Certification ID: H0PBHJPQTE4414CG | Mar 2025<br></p>
-<h2><u>Volunteering Experience</u></h2>
-<p style="font-family: Georgia, serif !important;" > ~ Spanish Tutor (Bruton High School) | Mar 2023 – Jun 2023</p>
-<ul>
-  <li>Assisted students in improving their Spanish language skills.</li>
-  <li>Developed personalized learning plans for students.</li>
-</ul>
+<div style="display: grid; grid-template-columns: 1fr 5fr; gap: 20px">
+  <div>
+    <p style="text-align: right">2023 - 2025</p></div>
+  <div>
+    <p>Bachelor’s Degree in Cybersecurity Technology, University of Maryland Global Campus</p></div>
+</div>
+<div style="display: grid; grid-template-columns: 1fr 5fr; gap: 20px">
+  <div>
+    <p style="text-align: right">2023 - Present</p></div>
+  <div>
+    <p>Bachelor’s Degree in Computer Science, University of Maryland Global Campus</p></div>
+</div>
+<div style="display: grid; grid-template-columns: 1fr 5fr; gap: 20px">
+  <div>
+    <p style="text-align: right">Jul 2024</p></div>
+  <div>
+    <p>CompTIA A+ Certification</p></div>
+</div>
+<div style="display: grid; grid-template-columns: 1fr 5fr; gap: 20px">
+  <div>
+    <p style="text-align: right">Sep 2024</p></div>
+  <div>
+    <p>CompTIA Security+ Certification</p></div>
+</div>
+<div style="display: grid; grid-template-columns: 1fr 5fr; gap: 20px">
+  <div>
+    <p style="text-align: right">Mar 2025</p></div>
+  <div>
+    <p>CompTIA Linux+ Certification</p></div>
+</div>
 
     </main>
     <footer>
         <hr>
-        <!-- This displays the copyright with the year of the user's device -->
-        <p>© <script>document.write(/\d{4}/.exec(Date())[0])</script> rsomonte</p>
-        <p><em>Built with <a href="https://www.11ty.dev/">Eleventy v3.1.0</a></em></p>
+        <div class="footer-content">
+            <p class="copyright">&copy; <script>document.write(/\d{4}/.exec(Date())[0])</script> rsomonte</p>
+            <div class="social-icons">
+                <a href="https://www.github.com/rsomonte">
+                    <img src="https://icon-library.com/images/github-icon-white/github-icon-white-6.jpg" alt="GitHub icon" style="height:3em; vertical-align: middle;">
+                </a>
+                <a href="https://www.linkedin.com/in/rodrigo-de-diego-de-somonte/">
+                    <img src="https://bit.ly/4eIqFwg" alt="LinkedIn icon" style="height: 2em; vertical-align: middle;">
+                </a>
+            </div>
+        </div>
+        <p class="built-with"><em>Built with <a href="https://www.11ty.dev/">Eleventy v3.1.0</a></em></p>
     </footer>
 </body>
 </html>
