added hasher tool

--- a/content/tools.html
+++ b/content/tools.html
@@ -7,10 +7,8 @@ permalink: "/tools/"
 <p>Here you will find a list of tools I've developed using different technologies such as Wasm:</p>
 {% assign tools = collections.tools %}
 {% for tool in tools %}
-  <div class="tool-entry">
-    <a href="{{ tool.url }}"><h2>{{ tool.data.title | default: tool.fileSlug }}</h2></a>
+  <h2><a href="{{ tool.url }}">{{ tool.data.title | default: tool.fileSlug }}</a></h2>
     {% if tool.data.description %}
       <p>{{ tool.data.description }}</p>
     {% endif %}
-  </div>
 {% endfor %}
