--- a/content/tools/file-indentifier.html
+++ b/content/tools/file-indentifier.html
@@ -14,7 +14,7 @@ description: Identify file types in the browser using Rust and WebAssembly.
 
 <script type="module">
   // Import the wasm-pack generated JS and your Wasm function
-  import init, { identify_file_wasm } from '/pkg/filetype_wasm.js';
+  import init, { identify_file_wasm } from '/pkg/ufile_wasm.js';
 
   async function main() {
     // Initialize the Wasm module.
