--- a/tools/file-indentifier/index.html
+++ b/tools/file-indentifier/index.html
@@ -40,7 +40,7 @@
 
 <script type="module">
   // Import the wasm-pack generated JS and your Wasm function
-  import init, { identify_file_wasm } from '/pkg/filetype_wasm.js';
+  import init, { identify_file_wasm } from '/pkg/ufile_wasm.js';
 
   async function main() {
     // Initialize the Wasm module.
