deploy: eb712cfd2fae49030c2420dea0eb521cc15e0ea6

--- a/cv/index.html
+++ b/cv/index.html
@@ -31,7 +31,7 @@
         <!-- Page-specific content goes here -->
         <h1 style="text-align: center;">Rodrigo de Diego de Somonte</h1>
 <h2 style="text-align: center;">Cybersecurity Specialist | Software Developer</h2>
-<h3 style="text-align: center;">✉ <a href="mailto:rodrigodsc@protonmail.ch">rodrigodsc@protonmail.ch</a> | <img src="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Ficon-library.com%2Fimages%2Flinked-in-icon-black-and-white%2Flinked-in-icon-black-and-white-2.jpg&f=1&nofb=1&ipt=9de377bdf71b57f841ffefc9f50d2459eee121d1db396eeda25c7e78a2957ab1" alt="icon" style="height: 1em; vertical-align: middle;"> <a href="https://www.linkedin.com/in/rodrigo-de-diego-de-somonte/">rodrigo-de-diego-de-somonte</a></h3>
+<h3 style="text-align: center;">✉ <a href="mailto:rodrigodsc@protonmail.ch">rodrigodsc@protonmail.ch</a> | <img src="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Ficon-library.com%2Fimages%2Flinked-in-icon-black-and-white%2Flinked-in-icon-black-and-white-2.jpg&f=1&nofb=1&ipt=9de377bdf71b57f841ffefc9f50d2459eee121d1db396eeda25c7e78a2957ab1" alt="icon" style="height: 1em; vertical-align: middle;"> <a href="https://www.linkedin.com/in/rsomonte/">rsomonte</a></h3>
 <h2><u>Profile</u></h2>
 <p>Detail-oriented programmer with a 3.9 GPA and a strong foundation in Python, Java, and Rust. Demonstrated full-stack develop-
 ment skills by building and deploying a Discord bot with JavaScript and engineering a reusable Rust library compiled to WebAs-
@@ -171,7 +171,7 @@ sembly. Seeking a developer position to contribute to building efficient and sec
                 <a href="https://www.github.com/rsomonte">
                     <img src="https://icon-library.com/images/github-icon-white/github-icon-white-6.jpg" alt="GitHub icon" style="height:3em; vertical-align: middle;">
                 </a>
-                <a href="https://www.linkedin.com/in/rodrigo-de-diego-de-somonte/">
+                <a href="https://www.linkedin.com/in/rsomonte/">
                     <img src="https://bit.ly/4eIqFwg" alt="LinkedIn icon" style="height: 2em; vertical-align: middle;">
                 </a>
             </div>
